@@ -708,3 +708,4 @@
     - TEXTINCLUDE 1 を実装。
     - 多くのメモリリークを修正。
     - MP3音声のサポート。
+    - メニューの空文字列の問題を修正。
